[project]
name = "qmt-weight-sync"
version = "0.1.0"
description = "MiniQMT 权重日频调仓应用：上传持仓文件，后台自动调仓"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "requests>=2.31.0",
    "APScheduler>=3.10.0",
    "streamlit>=1.53.1",
    "xtquant>=250516.1.1",
    "python-dotenv>=1.0.0",
]

